[AAE-15712] Fix deprecation_warnings_Activiti (#4380)